# LibreChat_with_local_CI

./: .env.librechat  .gitignore  Dockerfile.api  Dockerfile.rce  Dockerfile.rce.gpu  README.md  README_en.md  benchmark_optimization.py  docker-compose.full.yml  docker-compose.gpu.yml  docker-compose.yml  librechat.yaml  main.py  pyproject.toml  rce_requirements.txt  requirements.api.txt  test_fix.py  verify_hypothesis.py
docs/: CI_Integration_Technical_Notes.md  Code_Interpreter_sanbox_Guide.md  LibreChat Code Interpreter Guide.md  TRUE_FINISH_GUIDE.md  librechat_integration_guide.md  librechat_japanese_filename_bug.md  librechat_session_id_bug_analysis.md  resource_analysis.md
tests/: conftest.py  integration_test.sh  reproduce_vulnerability.py  stress_benchmark.py  test_api.py  test_auth.py  test_auth_unit.py  test_cleanup_error_handling.py  test_cleanup_logic.py  test_code_wrapping.py  test_download.py  test_download_404.py  test_download_api.py  test_download_error_handling.py  test_execute_cleanup.py  test_execute_code_logic.py  test_execute_error_handling.py  test_happy_path.py  test_kernel_manager.py  test_km_error_recovery.py  test_list_files_endpoint.py  test_main.py  test_nanoid_security.py  test_resource_management.py  test_security_fix.py  test_security_headers.py  test_security_sanitization.py  test_startup.py  test_upload_api.py  test_upload_error_handling.py  test_volume_mapping.py
